# mprpc

./: CMakeLists.txt  autobuild.sh
example/: friend.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: logger.h  mprpcapplication.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.proto
